fix bigheadline on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,7 +673,7 @@ footer {
 		font-size: 2em;
 	}
 	.bigheadline {
-		font-size: 6em;
+		font-size: 4em;
 	}
 	.subheadline {
 		font-size: 2em;
